-updated voms-api-java maven group-id

--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.glite.voms</groupId>
+				<groupId>org.italiangrid</groupId>
 				<artifactId>voms-api-java</artifactId>
 				<version>${vomsjapi.version}</version>
 				<type>jar</type>
