--- a/gridhttps_filter/pom.xml
+++ b/gridhttps_filter/pom.xml
@@ -54,7 +54,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.glite.voms</groupId>
+			<groupId>org.italiangrid</groupId>
 			<artifactId>voms-api-java</artifactId>
 			<scope>provided</scope>
 		</dependency>
